--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -13,6 +13,7 @@
     sitemap: "网站地图"
     contact: "联系客户"
   banner:
+    choose: "Choose Language"
     title: "中小企业网站离云计算还有多远？"
     title2: "为你提供专业的网站建设服务！"
     slogan: "<LI>项目策划，网站开发</LI><LI>Web及桌面程序设计</LI><LI>网络运营，维护和推广</LI><LI>互联网工程师技术培训</LI>"
@@ -78,13 +79,15 @@
     t3: "开发模式"
     s3: "我们不断地尝试敏捷开发方法。通过互动方式为特征，快速的开发周期，并不断响应需求/解决方案为基础的优先次序，敏捷团队已经证明可以通过更少的时间产生优异的业绩。我们很简单地沉迷于敏捷模型。这是一个胜利，我们以此赢得客户，也赢得我们。<br/>敏捷模型使我们能够迅速更新客户的应用和我们自己内部的软件。我们的团队分布在全球各地，以满足各个地区的资源共享。此外，我们的发展和生产环境都是安全的（依托google,amazon的大型服务商的云平台）。您的数据和代码定期备份，避免攻击或丢失。"
     t4: "合作理念"
-    s4: "我们作为您的商业伙伴，为您制定和实施您认为最佳的解决方案，以满足您的需求。有见地的分析和战略规划，我们的工作给你你需要的竞争优势。我们的客户越来越信任于我们的商业开发、市场营销和技术决策。我们珍惜这种信任的程度。我们知道，我们客户的成功就是我们的成功。<br/><p>由于操作流程和工作任务越来越自动化，就算不是完全基于网络的业务，仍然以技术作为关键驱动。我们会根据你的需求，评估今天和明天以及后继期限的计划。这样做，我们才能快速开发，快速完善您的业务及运作效率，促进您的产品和服务，并推动收入和盈利能力。"
+    s4: "我们作为您的商业伙伴，为您制定和实施您认为最佳的解决方案，以满足您的需求。有见地的分析和战略规划，我们的工作给你你需要的竞争优势。我们的客户越来越信任于我们的商业开发、市场营销和技术决策。我们珍惜这种信任的程度。我们知道，我们客户的成功就是我们的成功。<br/><p>由于操作流程和工作任务越来越自动化，就算不是完全基于网络的业务，仍然以技术作为关键驱动。我们会根据你的需求，评估今天和明天以及后继期限的计划。这样做，我们才能快速开发，快速完善您的业务及运作效率，促进您的产品和服务，并推动收入和盈利能力。
+    <p><br/><br/><a href='/contact'><font size='+8' color='blue'>查看我们的联系方式</font></a></p>"
     t5: "合作单位"
     t6: "联系方式"
     us: "我们在中国和美国都有联络，在中国的合作伙伴成都设有办事处，在美国的合作伙伴洛杉矶设有办事处。<br/>
     注：我们会根据项目配备团队人员，以及是否是全职或是自由职业/兼职工作，我们同样可以远程办公（在家工作）或在中国成都以及美国洛杉矶城市工作。"
     addr: "<h2>四川成都办公室</h2><p>科华南路，美丽南庭，#3-1128</p><p>四川，成都 610000</p>
-           <h2>Los Angeles Office</h2><p>800 S. Los Angeles St., Suite 121B</p><p>Los Angeles, CA 90014</p>"
+           <h2>Los Angeles Office</h2><p>800 S. Los Angeles St., Suite 121B</p><p>Los Angeles, CA 90014</p>
+           <br/><h2>联系电话:</h2><h2> &nbsp;&nbsp;&nbsp;&nbsp;+86 15928661802</h2><h2>&nbsp;&nbsp;&nbsp;&nbsp;+86 13981853337</h2>"
   form:
     sign_up: "注册"
     login: "登录"
