--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -20,7 +20,7 @@
   index:
     title1: "新Web应用程序开发 <SPAN>产品团队为您持续优化企业网络应用的用户体验，用最简单的方式，让网络成为最简单的快乐。</SPAN>"
     dt1: "在线订单"
-    dd1: "使用QQ/Email等简单快捷的沟通方式，更快的响应您的请求，无论远近,无论国籍,用最短的时间达成合作协议。"
+    dd1: "使用QQ/Email等简单快捷的沟通方式，更快的响应您的请求，无论远近,用最短的时间达成合作协议。"
     dt2: "代码在云端"
     dd2: "不需要购买服务器,也不需要托管，<a href='http://github.com' target='_blank'>Github</a>可以为你托管所有的源代码,你只需要注册一个账户。"
     dt3: "数据在云端"
